--- a/pages/billingManagement/productionPlan/productionPlanDetail.wxml
+++ b/pages/billingManagement/productionPlan/productionPlanDetail.wxml
@@ -84,9 +84,9 @@
 			</view>
 		</view>
 		<van-image wx:if="{{info.is_check !== 4 && info.is_check !== 3}}" style="position: absolute;right:0;top:0%"
-			width="130" height="94" src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail"/>
+			width="130" height="94" src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail" />
 		<van-image wx:else style="position: absolute;right:2%;top:2%" width="90" height="90"
-			src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail"/>
+			src="{{statusImageList[info.is_check]}}" bindtap="openCheckDetail" />
 	</view>
 
 	<!-- 产品信息 -->
@@ -94,14 +94,10 @@
 		<view class="title">产品信息</view>
 		<view wx:for="{{info.product_info_data}}">
 			<view class="flex mt10 aic">
-				<view class="w30 flex aic">
-					<view class="bgColor27A2 colorWhite tc"
-						style="border-radius: 500px;width:25px;height: 25px;line-height: 25px;">
-						{{index+1}}
-					</view>
-					<view class="color6 ml10">编号品类</view>
+				<view class="bgColor27A2 colorWhite tc" style="border-radius: 500px;width:25px;height: 25px;line-height: 25px;">
+					{{index+1}}
 				</view>
-				<view class="w70 color27A2" bindtap="showDetailPro" data-item="{{item}}">
+				<view class="ml10 color27A2" bindtap="showDetailPro" data-item="{{item}}">
 					{{ item.product_code || item.system_code }}（{{ item.category_name }}/{{ item.secondary_category_name }}）
 				</view>
 			</view>
@@ -112,31 +108,33 @@
 						src="{{item.image_data[0] || 'https://file.zwyknit.com/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20220211103236.png'}}" />
 				</view>
 			</view>
-			<view class="flex mt10">
-				<view class="w30 color6">尺码颜色</view>
-				<view class="w70">
-					{{item.size_name}}/{{item.color_name}}
-				</view>
-			</view>
-			<view class="flex mt10" wx:for="{{item.rel_component}}" wx:for-item="itemPart" wx:for-index="indexPart">
-				<view class="w30 color6">产品部位</view>
-				<view class="w70">
-					{{item.part_name}}
-					<!-- {{item.part_name}}/{{itemPart.component_name}}{{item.number}}% -->
-					<text wx:if="{{indexPart!==item.rel_component.length-1}}">+</text>
-				</view>
-			</view>
-			<view class="flex mt10">
-				<view class="w50 flex">
-					<view class="w60 color6">分配数量</view>
-					<view class="w40">
-						{{item.number}}
+			<view wx:for="{{item.childrenMergeInfo}}" wx:for-item="itemProDetail">
+				<view class="flex mt10">
+					<view class="w30 color6">尺码颜色</view>
+					<view class="w70">
+						{{itemProDetail.size_name}}/{{itemProDetail.color_name}}
 					</view>
 				</view>
-				<view class="w50 flex">
-					<view class="w60 color6">分配单价</view>
-					<view class="w40">
-						{{item.price}}元
+				<view class="flex mt10" wx:for="{{itemProDetail.rel_component}}" wx:for-item="itemPart" wx:for-index="indexPart">
+					<view class="w30 color6">产品部位</view>
+					<view class="w70">
+						{{itemProDetail.part_name}}
+						<!-- {{item.part_name}}/{{itemPart.component_name}}{{item.number}}% -->
+						<text wx:if="{{indexPart!==itemProDetail.rel_component.length-1}}">+</text>
+					</view>
+				</view>
+				<view class="flex mt10">
+					<view class="w50 flex">
+						<view class="w60 color6">分配数量</view>
+						<view class="w40">
+							{{itemProDetail.number}}
+						</view>
+					</view>
+					<view class="w50 flex">
+						<view class="w60 color6">分配单价</view>
+						<view class="w40">
+							{{itemProDetail.price}}元
+						</view>
 					</view>
 				</view>
 			</view>
@@ -304,5 +302,6 @@
 	</van-popup>
 	<t-image-viewer visible="{{showImage1}}" background-color='rgba(0, 0, 0, 0.6)' images="{{productInfo.image_data}}"
 		bind:close="closeShowImage" />
-	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{info.is_check}}" check_type="4" bind:cancel="closeCheckDetail"></check-detail>
+	<check-detail show="{{showCheckDetail}}" pid="{{id}}" is_check="{{info.is_check}}" check_type="4"
+		bind:cancel="closeCheckDetail"></check-detail>
 </view>
