--- a/pages/billingManagement/inspectionReceiptDocument/inspectionReceiptDocument.wxml
+++ b/pages/billingManagement/inspectionReceiptDocument/inspectionReceiptDocument.wxml
@@ -10,7 +10,10 @@
 		<view class="flex aic">
 			<l-input class="w90" bind:lininput="changeParams" value="{{keyword}}" placeholder="检验单号/订单号"
 				hide-label="{{true}}" />
-			<view class="w10 color27A2" bindtap="openPopup">筛选</view>
+				<view class="w20 color6 flex aic" bindtap="openPopup">
+					<view>筛选</view>
+					<t-icon name="menu-unfold" size="xl" bind:click="someFunction" />
+				</view>
 		</view>
 
 		<view class="flex jcsb" style="padding: 10px;">
