--- a/pages/billingManagement/packingOrder/packingOrder.wxml
+++ b/pages/billingManagement/packingOrder/packingOrder.wxml
@@ -7,8 +7,11 @@
 	</nav-content>
 
 	<view class="flex bgColorWhite aic">
-		<l-input class="w90" bind:lininput="changeParams" value="{{code}}" placeholder="订购单号/订单号" hide-label="{{true}}" />
-		<view class="w10 color27A2" bindtap="openPopup">筛选</view>
+		<l-input class="w80" bind:lininput="changeParams" value="{{code}}" placeholder="订购单号/订单号" hide-label="{{true}}" />
+		<view class="w20 color6 flex aic" bindtap="openPopup">
+			<view>筛选</view>
+			<t-icon name="menu-unfold" size="xl" bind:click="someFunction" />
+		</view>
 	</view>
 
 	<scroll-view scroll-y class="vh80" bindscrolltolower="reqOrder">
