--- a/pages/billingManagement/rawMaterialPlan/rawMaterialPlan.wxml
+++ b/pages/billingManagement/rawMaterialPlan/rawMaterialPlan.wxml
@@ -8,8 +8,11 @@
 
 	<view class="bgColorWhite">
 		<view class="flex aic">
-			<l-input class="w90" bind:lininput="changeParams" value="{{code}}" placeholder="计划单号/订单号" hide-label="{{true}}" />
-			<view class="w10 color27A2" bindtap="openPopup">筛选</view>
+			<l-input class="w80" bind:lininput="changeParams" value="{{code}}" placeholder="计划单号/订单号" hide-label="{{true}}" />
+			<view class="w20 color6 flex aic" bindtap="openPopup">
+				<view>筛选</view>
+				<t-icon name="menu-unfold" size="xl" bind:click="someFunction" />
+			</view>
 		</view>
 		<view class="flex jcsb" style="padding: 10px;">
 			<view class="w33">
@@ -19,7 +22,7 @@
 			<view class="w33">
 				<view>原料数</view>
 				<view class="mt10 color03d0 bold">
-					{{additional.total_material_number || 0}} 吨或千米 
+					{{additional.total_material_number || 0}} 吨或千米
 				</view>
 			</view>
 			<view class="w33">
