--- a/pages/billingManagement/workshopSettlementLog/workshopSettlementLog.wxml
+++ b/pages/billingManagement/workshopSettlementLog/workshopSettlementLog.wxml
@@ -8,8 +8,11 @@
 
 	<view class="bgColorWhite">
 		<view class="flex aic">
-			<l-input class="w90" bind:lininput="changeParams" value="{{code}}" placeholder="订单号/产品编号" hide-label="{{true}}" />
-			<view class="w10 color27A2" bindtap="openPopup">筛选</view>
+			<l-input class="w80" bind:lininput="changeParams" value="{{code}}" placeholder="订单号/产品编号" hide-label="{{true}}" />
+			<view class="w20 color6 flex aic" bindtap="openPopup">
+				<view>筛选</view>
+				<t-icon name="menu-unfold" size="xl" bind:click="someFunction" />
+			</view>
 		</view>
 
 		<view class="flex jcsb" style="padding: 10px;">
