--- a/pages/manage/manage.wxml
+++ b/pages/manage/manage.wxml
@@ -66,20 +66,20 @@
 
 	<view class="tab-bar" style="overflow:unset">
 		<view class="tab-bar-border"></view>
-		<cover-view class="tab-bar-item" bindtap="toIndex">
-			<cover-image src="https://file.zwyknit.com/%E9%A6%96%E9%A1%B5%EF%BC%88%E7%81%B0%E8%89%B2%EF%BC%89-01.png">
-			</cover-image>
-			<cover-view class="color91">首页</cover-view>
-		</cover-view>
+		<view class="tab-bar-item" bindtap="toIndex">
+			<image style="width: 27px;" src="https://file.zwyknit.com/%E9%A6%96%E9%A1%B5%EF%BC%88%E7%81%B0%E8%89%B2%EF%BC%89-01.png">
+			</image>
+			<view class="color91">首页</view>
+		</view>
 		<view class="tab-bar-item" style="transform: translateY(-50%);" bindtap="GetSandCode">
 			<van-icon name="scan" size="50px" class="color91"
 				style="background-color: white; border-top: 1px solid rgba(0, 0, 0, 0.33);padding: 10px; border-radius: 500px;" />
 		</view>
-		<cover-view class="tab-bar-item">
-			<cover-image src="https://file.zwyknit.com/%E7%AE%A1%E7%90%86-01.png">
-			</cover-image>
-			<cover-view class="color27A2">管理</cover-view>
-		</cover-view>
+		<view class="tab-bar-item">
+			<image style="width: 27px;" src="https://file.zwyknit.com/%E7%AE%A1%E7%90%86-01.png">
+			</image>
+			<view class="color27A2">管理</view>
+		</view>
 	</view>
 
 	<van-dialog id="van-dialog" confirm-button-color="#27A2FD" />
