--- a/pages/quotedPrice/quotedPrice.scss
+++ b/pages/quotedPrice/quotedPrice.scss
@@ -10,5 +10,68 @@
 
   .t-dropdown-item__content {
     top: 40px;
+	}
+	
+	.radio-label label,
+  .checkbox-label label {
+    display: inline-block;
+  }
+
+  .input_list {
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    padding-bottom: 20rpx;
+  }
+
+  radio .wx-radio-input {
+    width: 185rpx;
+    height: 60rpx;
+    margin-top: 20rpx;
+    background: #fff;
+    border: solid 1rpx #ccc;
+    border-radius: 10rpx;
+    float: left;
+  }
+
+  .radio-label .label {
+    z-index: 1;
+    position: absolute;
+    width: 185rpx;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    height: 60rpx;
+    line-height: 65rpx;
+    margin-top: 20rpx;
+    font-size: 28rpx;
+    color: #333;
+    text-align: center;
+    border-radius: 10rpx;
+  }
+
+  /*单选，多选按钮选中后背景样式 */
+  radio .wx-radio-input.wx-radio-input-checked {
+    width: 185rpx;
+    height: 60rpx;
+    background: #008df93d;
+    border: solid 1px #008df9;
+    border-radius: 10rpx;
+  }
+
+  /*单选，多选按钮选中后勾勾样式*/
+  radio .wx-radio-input.wx-radio-input-checked::before {
+    background: transparent;
+    border-radius: 10rpx;
+    content: "";
+	}
+	
+	.submit.small .van-button {
+    width: 32vw;
+	}
+	
+	.van-cell {
+    padding: 0;
+    font-size: unset;
   }
 }
