--- a/pages/quotedPriceDetail/quotedPriceDetail.wxml
+++ b/pages/quotedPriceDetail/quotedPriceDetail.wxml
@@ -30,7 +30,7 @@
 			<view class="color6 w30">系统报价</view>
 			<view>
 				<text wx:if="{{detailData.system_total_price}}">
-					<text class="color27A2">{{detailData.system_total_price}}</text>{{detailData.settle_unit}}
+					<text class="color27A2">{{detailData.system_total_price}}</text>元
 				</text>
 				<text wx:else>
 					<text>无</text>
